WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60482
popup fixes
https://bugs.webkit.org/show_bug.cgi?id=60482
Summary
popup fixes
Robin Dunn
Reported
2011-05-09 11:03:44 PDT
Created
attachment 92807
[details]
popup fixes patch Update the code to properly initialize the handler and native control.
Attachments
popup fixes patch
(1.59 KB, patch)
2011-05-09 11:03 PDT
,
Robin Dunn
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2011-05-09 11:23:51 PDT
Landed in
r86071
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug