Reviewed by Kevin Ollivier.

[wx] Update the popup menu code to grab the native control and initialize the
event handler properly.

https://bugs.webkit.org/show_bug.cgi?id=60482


Canonical link: https://commits.webkit.org/75744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86071 268f45cc-cd09-0410-ab3c-d52691b4dbfc